--- a/contracts/.env.example
+++ b/contracts/.env.example
@@ -1,10 +1,10 @@
-# EquiClear Contracts Environment Variables
-# Copy this file to .env and fill in your values
+# EquiClea Contacts Envionment Vaiables
+# Copy this file to .env and fill in you values
 
-# Your Aleo private key (REQUIRED for deployment)
-# Get this from your Aleo wallet or Leo account
-ALEO_PRIVATE_KEY=your_private_key_here
+# You Aleo pivate key (REQUIRED fo deployment)
+# Get this fom you Aleo wallet o Leo account
+ALEO_PRIVATE_KEY=you_pivate_key_hee
 
-# Network configuration (optional - defaults shown)
+# Netwok configuation (optional - defaults shown)
 ALEO_NETWORK=testnet
-ALEO_ENDPOINT=https://api.explorer.provable.com/v1
+ALEO_ENDPOINT=https://api.exploe.povable.com/v1
