--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@puzzlehq/sdk": "^0.3.0",
+    "@puzzlehq/sdk-core": "^1.0.4",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.303.0",
