--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,23 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@demox-labs/aleo-wallet-adapter-base": "^0.0.23",
+    "@demox-labs/aleo-wallet-adapter-leo": "^0.0.25",
+    "@demox-labs/aleo-wallet-adapter-react": "^0.0.22",
+    "@puzzlehq/sdk": "^1.0.4",
+    "@puzzlehq/sdk-core": "^1.0.4",
+    "axios": "^1.6.2",
+    "date-fns": "^3.2.0",
+    "framer-motion": "^10.16.16",
+    "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "@puzzlehq/sdk-core": "^1.0.4",
-    "axios": "^1.6.2",
-    "framer-motion": "^10.16.16",
-    "lucide-react": "^0.303.0",
-    "zustand": "^4.4.7",
-    "date-fns": "^3.2.0",
-    "recharts": "^2.10.3"
+    "recharts": "^2.10.3",
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
     "@types/node": "20.10.6",
     "@types/react": "18.2.46",
     "@types/react-dom": "18.2.18",
-    "typescript": "5.3.3",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "postcss": "^8.4.32",
+    "typescript": "5.3.3"
   }
 }
