--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "@puzzlehq/sdk-core": "^1.0.4",
     "axios": "^1.6.2",
     "date-fns": "^3.2.0",
-    "framer-motion": "^10.16.16",
+    "framer-motion": "^10.18.0",
     "lucide-react": "^0.303.0",
     "next": "14.0.4",
     "react": "18.2.0",
@@ -25,11 +25,11 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
-    "@types/node": "20.10.6",
-    "@types/react": "18.2.46",
+    "@types/node": "^20.10.6",
+    "@types/react": "^18.2.46",
     "@types/react-dom": "18.2.18",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-    "typescript": "5.3.3"
+    "typescript": "^5.3.3"
   }
 }
