--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "@types/react": "^18.2.46",
     "@types/react-dom": "18.2.18",
     "autoprefixer": "^10.4.16",
+    "eslint-config-next": "16.1.2",
     "postcss": "^8.4.32",
     "typescript": "^5.3.3"
   }
