--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -2,7 +2,10 @@
 NEXT_PUBLIC_ALEO_NETWORK=testnet
 
 # Indexer API
+# For local development:
 NEXT_PUBLIC_INDEXER_URL=http://localhost:3001
+# For production (Vercel), set this in Vercel Environment Variables:
+# NEXT_PUBLIC_INDEXER_URL=https://equiclear.onrender.com
 
 # Contract Addresses (update after deployment)
 NEXT_PUBLIC_BALANCE_CONTRACT=equiclear_balance.aleo
