simplify architecture by removing bid, claim, and balance contracts
Remove the separate bid, claim, and balance contracts, consolidating functionality into a single auction contract. Delete the indexer backend and associated documentation, as the frontend now directly interacts with the Aleo blockchain. Update the frontend to use a simpler wallet-based flow without deposits, storing known auction IDs locally instead of relying on a backend indexer.

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,18 +1,5 @@
 # Aleo Network
 NEXT_PUBLIC_ALEO_NETWORK=testnet
 
-# Indexer API
-# For local development:
-NEXT_PUBLIC_INDEXER_URL=http://localhost:3001
-# For production (Vercel), set this in Vercel Environment Variables:
-# NEXT_PUBLIC_INDEXER_URL=https://equiclear.onrender.com
-
-# Contract Addresses (update after deployment)
-NEXT_PUBLIC_BALANCE_CONTRACT=equiclear_balance.aleo
-NEXT_PUBLIC_AUCTION_CONTRACT=equiclear_auction.aleo
-NEXT_PUBLIC_BID_CONTRACT=equiclear_bid.aleo
-NEXT_PUBLIC_CLAIM_CONTRACT=equiclear_claim.aleo
-
-# Supabase (for direct frontend access if needed)
-NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
-NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
+# Contract Address (update after deployment)
+NEXT_PUBLIC_AUCTION_CONTRACT=equiclear_auction_4829.aleo
