--- a/contracts/.env.example
+++ b/contracts/.env.example
@@ -1,10 +1,10 @@
-# EquiClea Contacts Envionment Vaiables
-# Copy this file to .env and fill in you values
+# EquiClear Contracts Environment Variables
+# Copy this file to .env and fill in your values
 
-# You Aleo pivate key (REQUIRED fo deployment)
-# Get this fom you Aleo wallet o Leo account
-ALEO_PRIVATE_KEY=you_pivate_key_hee
+# Your Aleo private key (REQUIRED for deployment)
+# Get this from your Aleo wallet or Leo account
+ALEO_PRIVATE_KEY=your_private_key_here
 
-# Netwok configuation (optional - defaults shown)
+# Network configuration (optional - defaults shown)
 ALEO_NETWORK=testnet
-ALEO_ENDPOINT=https://api.exploe.povable.com/v1
+ALEO_ENDPOINT=https://api.explorer.provable.com/v1
